<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LineSelectPage</string>
    <string name="please_select">検索したい時刻表の路線方面を選んでください</string>
    <string name="action_settings">Settings</string>
    <string name="ino_gomen">東西線上り選択ボタン</string>
    <string name="gomen_ino">東西線下り選択ボタン</string>
    <string name="zanbashi_kochi">南北線上り選択ボタン</string>
    <string name="kochi_zanbashi">南北線下り選択ボタン</string>
    

</resources>
