<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.Rometta.lineselectpage.LineSelect" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_select"
        android:textSize="12sp" />
    
     <!-- 路線選択ボタン -->
    <ImageButton
    	 android:id="@+id/image_InoGomen"
     	 android:layout_width="269dp"
     	 android:layout_height="72dp"
     	 android:layout_gravity="center_horizontal"
      	 android:layout_margin="10dp"
     	 android:background="#00000000"
      	 android:scaleType="fitCenter"
     	 android:contentDescription="@string/ino_gomen"
   	     android:src="@drawable/ino_gomen" />
    
 
    <ImageButton
    	 android:id="@+id/image_GomenIno"
     	 android:layout_width="269dp"
     	 android:layout_height="72dp"
     	 android:layout_gravity="center_horizontal"
      	 android:layout_margin="10dp"
     	 android:background="#00000000"
      	 android:scaleType="fitCenter"
     	 android:contentDescription="@string/gomen_ino"
   	     android:src="@drawable/gomen_ino" />
    
    <ImageButton
    	 android:id="@+id/image_ZanbashiKochi"
     	 android:layout_width="269dp"
     	 android:layout_height="72dp"
     	 android:layout_gravity="center_horizontal"
      	 android:layout_margin="10dp"
     	 android:background="#00000000"
      	 android:scaleType="fitCenter"
     	 android:contentDescription="@string/zanbashi_kochi"
   	     android:src="@drawable/zanbashi_kochi" />
    
    <ImageButton
    	 android:id="@+id/image_KochiZanbashi"
     	 android:layout_width="269dp"
     	 android:layout_height="72dp"
     	 android:layout_gravity="center_horizontal"
      	 android:layout_margin="10dp"
     	 android:background="#00000000"
      	 android:scaleType="fitCenter"
     	 android:contentDescription="@string/kochi_zanbashi"
   	     android:src="@drawable/kochi_zanbashi" />
    

</LinearLayout>
